Mobile content overflow issue

--- a/css/layout.css
+++ b/css/layout.css
@@ -111,7 +111,7 @@ article {
 	padding: 7px;
 	height: 165px;
 	float: right;
-	overflow: visible;
+	overflow: hidden;
 }
 
 .emailsign {
